--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 @font-face {
     font-family: 'Bebas Neue';
-    src: url('BebasNeue.ttf');
+    src: url('assets/BebasNeue.ttf');
 }
 
 body {
@@ -19,6 +19,9 @@ body {
 
 .contacts {
     padding: 2rem;
+    background: url("assets/background.svg");
+    background-attachment: cover; 
+    background-repeat: none; 
 }
 
 h1 {
@@ -36,6 +39,19 @@ a {
     text-decoration: none;
 }
 
+.heading {
+    position: relative;
+}
+
+.heading--svg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    left: 0;
+    transform: scale(1.1) translateY(40%);
+}
+
 .beautiful-link {
     color: black;
     font-weight: 100;
@@ -43,6 +59,16 @@ a {
     border-radius: 20px;
     padding: .5rem 1rem;
     background-color: white;
+    position: relative;
+}
+
+.beautiful-link--svg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    transform: scale(1.1);
 }
 
 .beautiful-link:hover {
